# costco-data-platform

./: .gitignore  COSTCO_FRONTEND_PLAN.json  README.md  development_plan.json  megamenu-dump.json  pyproject.toml  run_api.sh  run_scraper.sh
.claude/: settings.local.json
costco_etl/: main_runner.py
costco_etl/api/: app.py
costco_etl/observability/: run_context.py
costco_etl/scraping/: costco_scraper.py  get_key.py  get_megamenu.py  navigation_crawler.py  parse_megamenu.py
costco_etl/storage/: init_db.py  persist_arbitrage.py  persist_arbitrage_daily.py  persist_products.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ArbitrageTable.tsx  BusinessIntelligence.tsx  CatalogExplorer.tsx  MetricsBar.tsx  UpdateButton.tsx
frontend/src/stores/: etlStore.ts
plan_arbitraje-descartado/: development_plan.json
tests/: test_cost_001_crawler.py  test_cost_002_scraper.py  test_cost_003_004_async_io.py  test_cost_005_pipeline.py  test_cost_006_api_etl.py  test_cost_007_delta.py
