[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "costco-etl"
version = "1.0.0"
description = "End-to-end Python ETL pipeline for scraping, organizing, and analyzing Costco product catalog data."
authors = [
  { name = "Leonardo Vila" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "aiohttp>=3.9,<4",
  "fastapi>=0.110,<1",
  "uvicorn[standard]>=0.29,<1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["costco_etl*"]